--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,5 +14,20 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to IBM Container Registry
+      env:
+        IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
+      run: |
+        echo "$IBM_CLOUD_API_KEY" > ibmcloud_apikey
+        echo "icr.io" > registry.txt
+        cat registry.txt | docker login -u iamapikey --password-stdin
+        rm ibmcloud_apikey
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        context: .
+        push: true
+        tags: icr.io/client-engineering/visual-gpt:latest
