--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,20 +14,27 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+
+    - name: Install IBM Cloud CLI
+      run: |
+        curl -fsSL https://clis.cloud.ibm.com/install/linux | sh
 
     - name: Log in to IBM Container Registry
       env:
         IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
       run: |
-        echo "$IBM_CLOUD_API_KEY" > ibmcloud_apikey
-        echo "icr.io" > registry.txt
-        cat registry.txt | docker login -u iamapikey --password-stdin
-        rm ibmcloud_apikey
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        push: true
-        tags: icr.io/client-engineering/visual-gpt:latest
+        ibmcloud login --apikey $IBM_CLOUD_API_KEY
+        ibmcloud cr region-set us-south
+        ibmcloud cr login
+
+
+    - name: Build Docker image
+      run: |
+        docker build -t us.icr.io/client-engineering/visual-gpt:latest .
+
+    - name: Push Docker image to IBM Container Registry
+      run: |
+        docker push us.icr.io/client-engineering/visual-gpt:latest
