--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -27,6 +27,7 @@ jobs:
         IBM_CLOUD_API_KEY: ${{ secrets.IBM_CLOUD_API_KEY }}
       run: |
         ibmcloud login --apikey $IBM_CLOUD_API_KEY -r jp-tok
+        ibmcloud plugin install container-registry
         ibmcloud cr region-set global
         ibmcloud cr login
 
